--- a/config.yaml
+++ b/config.yaml
@@ -8,53 +8,61 @@
   "file_match": "**/*.tf"
   "matchType": "file"
   "parse_function": "terraform"
-# - "type": "Cloudformation (CFN)"
-#   "content_match":
-#     - "AWSTemplateFormatVersion:"
-#   "matchType": "content"
-#   "parse_function": "parse_cloudformation_file"
-# - "type": "Cloudformation (CFN)"
-#   "file_match": "**/*.json"
-#   "matchType": "file"
-#   "parse_function": "parse_cloudformation_file"
-# - "type": "Cloudformation (CFN)"
-#   "file_match": "**/*.yml"
-#   "matchType": "file"
-#   "parse_function": "parse_cloudformation_file"
-# - "type": "Cloudformation (CFN)"
-#   "file_match": "**/*.yaml"
-#   "matchType": "file"
-#   "parse_function": "parse_cloudformation_file"
+- "type": "Cloudformation (CFN)"
+  "content_match":
+    - "AWSTemplateFormatVersion:"
+  "matchType": "content"
+  "parse_function": "cloudformation"
+- "type": "Cloudformation (CFN)"
+  "file_match": "**/*.json"
+  "matchType": "file"
+  "parse_function": "cloudformation"
+- "type": "Cloudformation (CFN)"
+  "file_match": "**/*.yml"
+  "matchType": "file"
+  "parse_function": "cloudformation"
+- "type": "Cloudformation (CFN)"
+  "file_match": "**/*.yaml"
+  "matchType": "file"
+  "parse_function": "cloudformation"
 # - "type": "JavaScript (Node.js)"
 #   "file_match": "**/*.js"
 #   "content_match":
 #     - "express"
 #     - "mongoose"
 #   "matchType": "content"
-# - "type": "Python"
-#   "file_match": "**/*.py"
-#   "content_match":
-#     - "import aws"
-#     - "import aws-cdk"
-#   "matchType": "content"
-# - "type": "Shell"
-#   "file_match": "**/*.sh"
-#   "content_match":
-#     - "apt-get install"
-#     - "chmod +x"
-#   "matchType": "content"
-# - "type": "PowerShell"
-#   "file_match": "**/*.ps1"
-#   "content_match":
-#     - "Install-Module"
-#     - "New-Item"
-#   "matchType": "content"
-# - "type": "YAML (Ansible)"
+- "type": "Python"
+  "file_match": "**/*.py"
+  "content_match":
+    - "import aws"
+    - "import aws-cdk"
+    - "import boto3"
+  "matchType": "content"
+  "parse_function": "boto3"
+- "type": "Shell"
+  "file_match": "**/*.sh"
+  "content_match":
+    - "apt-get install"
+    - "chmod +x"
+  "matchType": "content"
+- "type": "PowerShell"
+  "file_match": "**/*.ps1"
+  "content_match":
+    - "Install-Module"
+    - "New-Item"
+  "matchType": "content"
+#- "type": "YAML (Ansible)"
 #   "file_match": "**/*.yml"
 #   "content_match":
 #     - "name: "
 #     - "tasks:"
 #   "matchType": "content"
+- "type": "Ansible"
+  "file_match": "**/*.yaml"
+  "content_match":
+    - "name: "
+    - "tasks:"
+  "matchType": "content"
 # - "type": "Java"
 #   "file_match": "**/*.java"
 #   "content_match":
@@ -112,9 +120,9 @@
 # - "type": "Terraform"
 #   "file_match": "**/*.tf"
 #   "matchType": "file"
-# - "type": "Ansible"
-#   "file_match": "**/*.yml"
-#   "matchType": "file"
+- "type": "Ansible"
+  "file_match": "**/*.yml"
+  "matchType": "file"
 # - "type": "Chef"
 #   "file_match": "**/*.rb"
 #   "matchType": "file"
@@ -127,9 +135,9 @@
 # - "type": "PowerShell"
 #   "file_match": "**/*.ps1"
 #   "matchType": "file"
-# - "type": "Python"
-#   "file_match": "**/*.py"
-#   "matchType": "file"
+- "type": "Python"
+  "file_match": "**/*.py"
+  "matchType": "file"
 # - "type": "Shell"
 #   "file_match": "**/*.sh"
 #   "matchType": "file"
