--- a/config.yaml
+++ b/config.yaml
@@ -125,6 +125,13 @@ assets:
       - 'using Amazon.'
       - 'using AWS.'
     parse_function: csharp
+  - type: SpringCloud
+    file_match: '*.java'
+    matchType: content
+    content_match:
+      - package io.awspring.cloud
+      - 'import org.springframework.cloud'
+    parse_function: springcloud
   # - type: Chef
   #   file_match: '*.rb'
   #   matchType: content
